ft(List all users): Get all authors
 - Create a route to get all authors
 - Protect the route
 - Create userProfile.js file inside controllers folder
 - Create function to get all authors and display them to authenticated user.
 - create userProfile.js file inside test folder and write test for the function I implemented.

[(Finishes #166790102)]
